--- a/oabutton/apps/bookmarklet/templates/bookmarklet/page1.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/page1.html
@@ -6,7 +6,7 @@
 
   {{ bookmarklet.non_field_errors }}
   {{ bookmarklet.accessed }}
-  {{ bookmarklet.user_id }}
+  {{ bookmarklet.slug }}
 
   <div class="control-group raleway-font">
       <p>You've hit a paywall!?</p>
