--- a/oabutton/apps/bookmarklet/templates/bookmarklet/page2.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/page2.html
@@ -31,7 +31,7 @@
     </p>
 </div>
 
-<form method="POST" action="{% url 'bookmarklet:form3' key=key %}">
+<form method="POST" action="{% url 'bookmarklet:form3' key=key slug=slug %}">
 <div class="control-group raleway-font">
     <div class="or-box row-block">
         <div class="row">
