Add Facebook Open Graph meta tags to bookmarklet

--- a/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
@@ -4,11 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta itemprop="name" content="Open Access Button">
-    <meta itemprop="description" content="Paywalls deny people access to life-saving research every day. The Open Access Button will make the damage of paywalls visible to the world and get you access to the research you need.">
-    <meta itemprop="image" content="/static/img/oabutton_logo.png">
+    <meta itemprop="name" property="og:title" property="og:site_name" content="Open Access Button">
+    <meta itemprop="description" property="og:description" content="Paywalls deny people access to life-saving research every day. The Open Access Button will make the damage of paywalls visible to the world and get you access to the research you need.">
+    <meta itemprop="image" property="og:image" content="/static/img/oabutton_logo.png">
+    <meta property="og:url" content="https://openaccessbutton.org">
+    <meta property="og:type" content="website">
+    <meta property="fb:profile_id" content="openaccessbutton">
     <title>Open Access Button</title>
     <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="canonical" href="https://openaccessbutton.org">
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/font-awesome.min.css">
     <link rel="stylesheet" href="/static/css/social-buttons.css">
