--- a/oabutton/static/public/less/app.less
+++ b/oabutton/static/public/less/app.less
@@ -155,7 +155,7 @@ header {
 /* Activity map */
 
 #world, #map { 
-  height: 500px; 
+  height: 640px;
   width: 100%; 
   margin-top: -20px;
 }
@@ -165,16 +165,17 @@ header {
     position: absolute;
     left: 0px;
     bottom: 0px;
-    width: 84%;
-    margin: 0 8%;
+    width: 100%;
     padding: 1em 0;
     z-index: 99;
     background: @oayellow;
+    opacity: .75;
 
     .lead {
       background: #fff;
       text-align: center;
       margin-bottom: 10px;
+      opacity: .875;
     }
 
     p { padding: 0 1em; font-size: 110%; }
