--- a/oabutton/static/public/less/app.less
+++ b/oabutton/static/public/less/app.less
@@ -99,6 +99,10 @@ header {
   background: white;
   border: 1px solid #ddd;
   border-radius: 10px;
+  .btn {
+    background-color: @oaorange;
+    border-color: @oayellow;
+  }
 }
 
 .slidetop {
@@ -129,6 +133,7 @@ header {
   margin-bottom: 0;
   padding-bottom: 0;
   .checkbox label { font-weight: 700; }
+  .btn-primary { background-color: @oagreen2; }
 }
 
 #help-bookmarklet {
@@ -254,6 +259,7 @@ a[data-toggle] {
     border-color: #444;
     color: #000;
     margin: 0 20px;
+    box-shadow: 3px 3px 10px @oagreys2;
   }
 }
 
@@ -394,7 +400,9 @@ a[data-toggle] {
   body { padding-top: 0px; }
   header a { background-size:100%; }
   header .lead { font-size:15px; position:relative; }
+  #map { height: 400px; }
 }
+
 @media screen and (max-width: 520px) {
   header a { 
     height: 110px; position: absolute; 
@@ -402,4 +410,5 @@ a[data-toggle] {
   }
   header .lead { visibility: hidden; }
   #github_ribbon { display: none; }
+  #map { height: 300px; }
 }
