minor text change on map text; fix #199

--- a/oabutton/apps/web/templates/web/index.jade
+++ b/oabutton/apps/web/templates/web/index.jade
@@ -67,7 +67,7 @@ block body
                         span 
                             | Paywalls Hit
                     p
-                        | This map displays people being denied access to the research they both need and paid for. Put yourself on the map using the Open Access Button to tell the world you are being denied access to knowledge. Using the Open Access Button will make the individual moments of injustice and frustration visible to the world.
+                        | This map displays people being denied access to research they both need and paid for. Using the Open Access Button will make your individual moments of injustice and frustration visible to the world. Go to openaccessbutton.org to explore the map further and tell the world you are being denied access to knowledge.
 
     #intro
         a(name='intro')
