added success and unreachable results when PhantomJS goes to validate availability of a link

--- a/oabutton/apps/bookmarklet/templates/bookmarklet/open_document_unreachable.jade
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/open_document_unreachable.jade
@@ -38,8 +38,9 @@ block body
             h2 Thanks!  Lets add a link to an open access version of your document to our repository!
             .row.hilite-left
                 .col-md-12
-                    p.link-added
-                        | Thanks!  Your link has been added to our database.
+                    p.link-unreachable
+                        | The link you submitted was not reachable from the public intenret. Error: {{ error }}
+                        | We'll try to help you out
 
     #footer
         a(name='contact')
