--- a/oabutton/static/public/css/styles.css
+++ b/oabutton/static/public/css/styles.css
@@ -278,6 +278,27 @@ a[data-toggle] {
 #thanks .row.hilite-right {
   border-right: 7px solid #ef5b23;
 }
+.panel-contribute {
+  margin: 0;
+  border: 0;
+  padding-top: 5pt;
+  text-align: center;
+}
+.panel-contribute .panel-body {
+  max-width: 80%;
+}
+.panel-contribute .contribute-button {
+  cursor: pointer;
+  background-color: #eb1478;
+  border: none;
+  padding: 3px 13px;
+  margin-left: 10pt;
+  color: #fff;
+}
+.panel-contribute .contribute-button:hover {
+  color: #fff;
+  font-weight: bold;
+}
 /* Container colors */
 #thanks {
   background: #ffd;
@@ -454,6 +475,12 @@ a[data-toggle] {
   header .lead {
     font-size: 15px;
     position: relative;
+  }
+  .panel-contribute {
+    margin-top: 1.5em;
+  }
+  .panel-contribute a {
+    padding: 0 1em;
   }
 }
 @media screen and (max-width: 520px) {
