--- a/oabutton/apps/bookmarklet/templates/bookmarklet/open_document_success.jade
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/open_document_success.jade
@@ -31,15 +31,11 @@ block body
     #start
         .container.center
             block start
-    
+
     #intro
         a(name='intro')
         .container
-            h2 Thanks!  Lets add a link to an open access version of your document to our repository!
-            .row.hilite-left
-                .col-md-12
-                    p.link-added
-                        | Thanks!  Your link has been added to our database.
+            h2 Your link has been added to our database! 
 
     #footer
         a(name='contact')
