--- a/oabutton/apps/bookmarklet/templates/bookmarklet/request_open_version.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/request_open_version.html
@@ -18,18 +18,28 @@ The Open Access Button
 {% endbody %}
 
 {% bodyhtml %}
+<p>
 Someone using the Open Access Button has recently hit a paywall on the
 article at <a href="{{ blocked_url }}">{{ blocked_url }}</a> that you
 are listed as a corresponding author on.
+</p>
 
+<p>
 You can submit a link to a freely available version of your article by
 using:
+</p>
 
+<p>
 <a href="{{ oa_free_url }}">{{ oa_free_url }}</a>
+</p>
 
+<p>
 The system will automatically inform all people who have requested
 your article that a freely available copy is available.
+</p>
 
-Best Wishes,
+<p>
+Best Wishes, <br />
 The Open Access Button
+</p>
 {% endbodyhtml %}
