Adjust bookmarklet headline, submit form anyway when offline

--- a/oabutton/apps/bookmarklet/templates/bookmarklet/page1.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/page1.html
@@ -9,9 +9,7 @@
   {{ bookmarklet.slug }}
 
   <div class="control-group raleway-font">
-      <p>You've hit a paywall!?</p>
-      <p>That sucks.</p>
-      <p>Tell us why and we'll put you on the map.</p>
+      <p>Share your problem accessing this paper, and put yourself on the Open Access map:</p>
   </div>
 
 
