Tweaked confirmation form

--- a/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
@@ -40,7 +40,9 @@
     {% block footer %}
     <div class="container bookmarklet-footer">
         <hr />
-        <p>For instructions, more info and your contribution head to <a href="http://www.openaccessbutton.org" target="_blank">www.openaccessbutton.org</a></p>
+        <p>For more information and the world map of contributions, visit 
+            <b><a href="http://www.openaccessbutton.org" target="_blank">OpenAccessButton.org</a></b>
+        </p>
         <hr />
         <div class="row">
             <div>
