--- a/oabutton/apps/bookmarklet/templates/bookmarklet/page2.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/page2.html
@@ -1,8 +1,7 @@
 {% extends "bookmarklet/layout.html" %}{% block content %}
 <div class="control-group raleway-font">
     <p>
-    Before we try and get you access, why not share your frustration -
-    help make this problem visible!
+    Share your interest in this research to make the barrier to access more visible:
     </p>
 
     <p>
@@ -27,7 +26,7 @@
     </p>
 
     <p>
-    We're also on <a href="https://www.facebook.com/openaccessbutton">Facebook</a> and <a href="https://twitter.com/OA_Button">Twitter</a>! Join us!
+    Follow us on <a href="https://www.facebook.com/openaccessbutton">Facebook</a> and <a href="https://twitter.com/OA_Button">Twitter</a> for Open Access updates.
     </p>
 </div>
 
