--- a/oabutton/apps/bookmarklet/templates/bookmarklet/bookmarklet.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/bookmarklet.html
@@ -144,9 +144,10 @@
 		iframe.style.zIndex = "2147483640";
 		iframe.style.boxSizing = "border-box";
 		iframe.style.MozBoxSizing = "border-box";
-		iframe.style.padding = "15px";
-		iframe.style.borderLeft = "2px #555 dashed";
-		iframe.style.background = "white";
+		iframe.style.padding = "0 0 0 5px";
+    iframe.style.borderLeft = "1px #555 dashed";
+		iframe.style.borderTop = "none";
+		iframe.style.background = "#ddd";
 		iframe.style.height = "100%";
 		iframe.style.width = "350px";
 		iframe.style.bottom = "0";
