Touched up thank-you text

--- a/oabutton/apps/bookmarklet/templates/bookmarklet/page3.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/page3.html
@@ -12,8 +12,11 @@
     {% endif %}
 
 
-    <p>Below are a number of ways to get access to your paper, unfortunately
-    they won't always work but it's worth a shot.
+    <p>We are working on ways to instantly suggest alternative sites
+    where you could find this research. We're sorry that this feature
+    is currently offline while we develop the new version. Your interest
+    and support is important, please get in touch and help us connect
+    people like yourself to vital research quickly.
     </p>
 
 
@@ -49,10 +52,6 @@
         </div>
         <hr />
     {% endif %}
-
-    <div>
-        <h4>Searching for related documents</h4>
-    </div>
 
     <div class="row-block">
         <div class="row">
