--- a/oabutton/apps/bookmarklet/templates/bookmarklet/email_confirmation.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/email_confirmation.html
@@ -1,7 +1,7 @@
 {% load email %}
 {% subject %}Thank you for signing up!{% endsubject %}
 {% body %}
-Hello, {{ name }}.
+Hello,
 
 Thank you for signing up with the Open Access Button.
 
@@ -15,16 +15,26 @@ The Open Access Button Team
 {% endbody %}
 
 {% bodyhtml %}
-Hello, <em>{{ name }}</em>.
+<p>
+Hello,
+</p>
 
+<p>
 Thank you for signing up with the Open Access Button.
+</p>
 
+<p>
 Please click on <a
     href="{{hostname}}{{ confirm_url }}">{{hostname}}{{ confirm_url }}</a> to confirm your email address.
+</P
 
+<p>
 To find out more information, please visit
 <a href="https://www.openaccessbutton.org/">http://www.openaccessbutton.org/</a>.
+</p>
 
-Sincerely,
+<p>
+Sincerely,<br/>
 The Open Access Button Team
+</p>
 {% endbodyhtml %}
